tests/ui/traits/suggest-dereferences/issue-39029.stderr
error[E0277]: the trait bound `NoToSocketAddrs: ToSocketAddrs` is not satisfied
  --> $DIR/issue-39029.rs:16:38
   |
LL |     let _errors = TcpListener::bind(&bad);
   |                   -----------------  ^^^ unsatisfied trait bound
   |                   |
   |                   required by a bound introduced by this call
   |
help: the trait `ToSocketAddrs` is not implemented for `NoToSocketAddrs`
  --> $DIR/issue-39029.rs:4:1
   |
LL | struct NoToSocketAddrs(String);
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `&NoToSocketAddrs` to implement `ToSocketAddrs`
note: required by a bound in `TcpListener::bind`
  --> $SRC_DIR/std/src/net/tcp.rs:LL:COL
help: consider dereferencing here
   |
LL |     let _errors = TcpListener::bind(&*bad);
   |                                      +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
